# lean

./: .gitignore  CMakeLists.txt  LICENSE
builds/: survivors_v01.7z
data/: WizardCharacter.scn  ants.scn  basic.fs  basic.vs  basic_blit.fs  basic_blit.vs  basic_blit_3dslice.fs  bloom_blur.fs  bloom_brightness.fs  bloom_combine.fs  bouncylights.lua  combo.scene  compute_sdf_make_triangles.cs  compute_test.cs  compute_test_find_vertices.cs  compute_test_make_triangles.cs  compute_test_write_volume.cs  creature_test.lua  creatures.scene  debugrender.fs  debugrender.vs  deferredlight.fs  dungeon.scn  dungeon2.scn  dungeon3.scn  dungeon3_parents.scn  dungeon_wizard.scn  entitytest.lua  entitytest.scene  fishtank.lua  fishtank.scene  fishtank.scn  forest.gltf  global_uniforms.h  gpu_torture.scn  heightmap_to_sdf.cs  imgui.ini  island.lua  island.scene  island_terrain.fs  (+76 more)
data/Stone_Wall_016_SD/: imgui.ini
data/ants/: ant_brain.beht  ant_brain_builder.beht  ant_deal_with_hunger.beht  ant_deal_with_hunter.beht  ant_pickup_nearby_rocks.beht  ant_pickup_rocks_for_building.beht  build_around_queen.beht  drop_rocks_at_nest.beht  main.lua
data/editor/: empty_scene_template.scn
data/engine/shaders/: render_context_2d.fs  render_context_2d.vs
data/survivors/: basic_white.scn  basic_white_bottom.scn  basic_white_middlepillar.scn  basic_white_top.scn  camera_follow_player.lua  grass_basic.scn  grass_basic_crates.scn  grass_basic_dark.scn  grass_basic_darker.scn  grass_camp.scn  grass_trees.scn  grass_trees_dense.scn  imgui.ini  main.lua  tile_metal_01.scn  tile_metal_02.scn  tile_metal_03.scn  weapon_barrel_bomb.lua  weapon_explode_nova.lua  weapon_fireball.lua
data/trees/: imgui.ini
source/ants/: ants.cpp  ants.h
source/behaviours/: basic_nodes.cpp  basic_nodes.h  behaviour_tree.cpp  behaviour_tree.h  behaviour_tree_debugger.cpp  behaviour_tree_debugger.h  behaviour_tree_editor.cpp  behaviour_tree_editor.h  behaviour_tree_instance.cpp  behaviour_tree_instance.h  behaviour_tree_renderer.cpp  behaviour_tree_renderer.h  behaviour_tree_system.cpp  behaviour_tree_system.h  blackboard.cpp  blackboard.h  node.cpp  node.h  node_editor.cpp  node_editor.h
source/core/: CMakeLists.txt  file_io.cpp  file_io.h  glm_headers.h  log.cpp  log.h  mutex.cpp  mutex.h  profiler.h  random.cpp  random.h  semaphore.cpp  semaphore.h  string_hashing.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h  time.cpp  time.h  timer.cpp  timer.h
source/editor/: command.h  command_list.cpp  command_list.h  editor.cpp  editor.h  editor_component_inspector.cpp  editor_component_inspector.h  transform_widget.cpp  transform_widget.h  utils.cpp  utils.h
source/editor/commands/: editor_clear_selection_cmd.cpp  editor_clear_selection_cmd.h  editor_clone_selection_cmd.cpp  editor_clone_selection_cmd.h  editor_close_cmd.cpp  editor_close_cmd.h  editor_create_entity_from_mesh_cmd.cpp  editor_create_entity_from_mesh_cmd.h  editor_delete_selection_cmd.cpp  editor_delete_selection_cmd.h  editor_import_scene_cmd.cpp  editor_import_scene_cmd.h  editor_new_scene_cmd.cpp  editor_new_scene_cmd.h  editor_save_scene_cmd.cpp  editor_save_scene_cmd.h  (+7 more)
source/engine/: 2d_render_context.cpp  2d_render_context.h  arcball_camera.cpp  arcball_camera.h  camera_system.cpp  camera_system.h  character_controller_system.cpp  character_controller_system.h  controller_state.h  debug_camera.cpp  debug_camera.h  debug_gui_menubar.cpp  debug_gui_menubar.h  debug_gui_system.cpp  debug_gui_system.h  debug_render.cpp  debug_render.h  engine_startup.cpp  engine_startup.h  event_system.cpp  event_system.h  file_picker_dialog.cpp  file_picker_dialog.h  frame_graph.cpp  frame_graph.h  frustum.h  graph_data_buffer.cpp  graph_data_buffer.h  graphics_system.cpp  graphics_system.h  imgui_sdl_gl3_render.cpp  imgui_sdl_gl3_render.h  input_system.cpp  input_system.h  intersection_tests.cpp  intersection_tests.h  job.cpp  job.h  job_queue.cpp  job_queue.h  (+60 more)
source/entity/: basic_inspector.cpp  basic_inspector.h  component.h  component_handle.h  component_handle.inl  component_inspector.h  component_storage.h  component_storage.inl  entity_handle.cpp  entity_handle.h  entity_system.cpp  entity_system.h  world.cpp  world.h
source/graphs/: graph.cpp  graph.h  graph_context.cpp  graph_context.h  graph_system.cpp  graph_system.h  node.cpp  node.h  pin_descriptor.cpp  pin_descriptor.h
source/main/: main.cpp
source/particles/: editor_value_inspector.cpp  editor_value_inspector.h  emitter_descriptor.cpp  emitter_descriptor.h  emitter_editor.cpp  emitter_editor.h  emitter_instance.cpp  emitter_instance.h  particle_buffer.h  particle_buffer.inl  particle_container.h  particle_container.inl  particle_emission_behaviour.cpp  particle_emission_behaviour.h  particle_system.cpp  particle_system.h
source/playground/: compute_test.cpp  compute_test.h  debug_gui_script_binding.cpp  debug_gui_script_binding.h  graphics.cpp  graphics.h  playground.cpp  playground.h  scene.cpp  scene.h  scene_editor.cpp  scene_editor.h  walkable_area.cpp  walkable_area.h  walkable_system.cpp  walkable_system.h
source/render/: camera.h  camera.inl  device.cpp  device.h  fence.h  frame_buffer.cpp  frame_buffer.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_builder.cpp  mesh_builder.h  render_buffer.cpp  render_buffer.h  render_pass.h  render_target_blitter.cpp  render_target_blitter.h  shader_binary.cpp  shader_binary.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  texture_source.h  texture_source.inl  uniform_buffer.cpp  uniform_buffer.h  utils.h  vertex_array.cpp  vertex_array.h  window.cpp  window.h
source/survivors/: attract_to_entity_component.cpp  attract_to_entity_component.h  dead_monster_component.cpp  dead_monster_component.h  entity_grid.h  explosion_component.cpp  explosion_component.h  monster_component.cpp  monster_component.h  player_component.cpp  player_component.h  projectile_component.cpp  projectile_component.h  survivors_main.cpp  survivors_main.h  world_tile_component.cpp  world_tile_component.h  world_tile_system.cpp  world_tile_system.h
(+84 files in other folders)
